# evocore

./: .gitignore  LICENSE  Makefile  README.md  shell.nix
deployment/configs/: logging.conf  production.conf
deployment/docker/: Dockerfile  docker-compose.yml
deployment/scripts/: health_check.sh  install.sh  uninstall.sh
docs/: DEPLOYMENT.md  META_EVOLUTION_MASTER_PLAN.md  PHASE_1_DETAILED_PLAN.md  evolutionary-intelligence-research.md
examples/: checkpoint_demo.c  gpu_benchmark.c  meta_demo.c  monitoring_demo.c  organic_learning_demo.c  sphere_config.ini  sphere_function.c  trading_domain.c  tsp_domain.c
include/evocore/: adaptive_scheduler.h  arena.h  config.h  context.h  error.h  evocore.h  exploration.h  fitness.h  genome.h  gpu.h  log.h  memory.h  meta.h  negative.h  optimize.h  persist.h  population.h  stats.h  synthesis.h  temporal.h  weighted.h
include/ontos/: domain.h
python/: pyproject.toml  setup.py
python/evocore/: __init__.py  _ffi_build.py
python/evocore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/evocore/learning/: __init__.py  context.py  negative.py  temporal.py  weighted.py
python/evocore/meta/: __init__.py  params.py  population.py
python/evocore/strategy/: __init__.py  exploration.py  synthesis.py
python/evocore/utils/: __init__.py  config.py  error.py  log.py  persist.py  stats.py
python/tests/: __init__.py
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
src/: adaptive.c  adaptive_scheduler.c  arena.c  config.c  context.c  domain.c  error.c  exploration.c  genome.c  gpu.c  internal.c  internal.h  log.c  memory.c  meta.c  negative.c  optimize.c  persist.c  population.c  stats.c  synthesis.c  temporal.c  weighted.c
(+2 files in other folders)
